<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ru.ojaqua.NearUtils</groupId>
	<artifactId>near-utils</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>near-utils</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.15</maven.compiler.source>
		<maven.compiler.target>1.15</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/junit/junit-dep -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit-dep</artifactId>
			<version>4.11</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.melloware/jintellitype -->
		<dependency>
			<groupId>com.melloware</groupId>
			<artifactId>jintellitype</artifactId>
			<version>1.4.0</version>
		</dependency>
	</dependencies>


</project>
